[metadata]
name = cryptoconfig
version = 1.0.1
author = NREL
author_email = david.martin@nrel.gov
description = Python class for handling encrypted elements in a config file.  Extension of ConfigParser.
long_description = file: README.md

[options]
packages = find:
install_requires = 
    configparser
    cryptography
python_requires = >= 3   
scripts=
    bin/cryptocfg.py
exclude =
    docs*
    tests*